src/objects/Installment_payment__c.object
<CustomObject>
    <fields>
        <fullName>Actual_amount_paid__c</fullName>
        <label>Actual amount paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_to_be_paid__c</fullName>
        <label>Amount to be paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booking_Name__c</fullName>
        <label>Booking Name</label>
        <referenceTo>Booking_Details__c</referenceTo>
        <relationshipLabel>Installment payments</relationshipLabel>
        <relationshipName>Installment_payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_of_payment__c</fullName>
        <formula>IF( NOT( ISPICKVAL( Payment_Method__c ,&quot;&quot;) ) , TODAY(),DATE(0000,00,00))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_date__c</fullName>
        <label>Due date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                </value>
                <value>
                    <fullName>Demand Draft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not paid</fullName>
                </value>
                <value>
                    <fullName>Fully paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Installment payment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Installment payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Installment payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>fully_paid</fullName>
        <active>true</active>
        <description>if the actual amount equal to amount to be paid, when fully paid option is chosed</description>
        <errorConditionFormula>ISPICKVAL( Status__c ,&quot;Fully paid&quot;)  &amp;&amp;  Actual_amount_paid__c != Amount_to_be_paid__c</errorConditionFormula>
        <errorMessage>Actual amount must need to be equal to full amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>not_paid</fullName>
        <active>true</active>
        <description>if the not paid option is clicked then not aloow to save</description>
        <errorConditionFormula>ISPICKVAL( Status__c ,&quot;Not paid&quot;)  &amp;&amp;  Actual_amount_paid__c != Amount_to_be_paid__c</errorConditionFormula>
        <errorMessage>Allowed to save when payment is fully paid</errorMessage>
    </validationRules>
</CustomObject>